# openglEngine

./: .gitignore  CMakeLists.txt  todo.todo
assets/character/: character.mtl
shaders/: fullLighting.frag  heightmap.frag  heightmap.tesc  heightmap.tese  heightmap.vert  modelLighting.frag  pureTexture.frag  text.frag  text.vert  text2.frag  text2.vert  texture.vert  zBuffer.frag
src/: Collision.cpp  Util.cpp  main.cpp
src/include/: Camera.hpp  CarObject.hpp  Collider.hpp  Collision.h  Engine.hpp  FileHandler.hpp  GameObject.hpp  Heightmap.hpp  Mesh.hpp  Model.hpp  ObjectHandler.hpp  PhysicsDrawer.hpp  PhysicsEngine.hpp  StaticBody.hpp  Terrain.hpp  Text.hpp  UI.hpp  Util.hpp  VehicleObject.hpp  Window.hpp
src/include/ecs/: Components.hpp  ECS.hpp  Global.hpp  Node.hpp  Systems.hpp  VehicleComponent.hpp  test.json
src/include/shader/: BaseShader.hpp  BasicShaders.hpp  ColliderShader.hpp  CubeShader.hpp  SkyboxShader.hpp  TextShader.hpp
